Send to room label alignment issue

--- a/src/skins/vector/css/matrix-react-sdk/structures/login/_Login.scss
+++ b/src/skins/vector/css/matrix-react-sdk/structures/login/_Login.scss
@@ -202,6 +202,19 @@ limitations under the License.
     flex-grow: 1;
 }
 
+.container_home {
+  margin-top: 15px;
+  display:flex;
+}
+.one {
+  flex-grow: 1;
+  align-self: center;
+  margin-right: 24px;
+}
+.two {
+  flex-grow: 1;
+}
+
 .mx_Login_type_dropdown {
     display: inline-block;
     min-width: 170px;
@@ -214,8 +227,6 @@ limitations under the License.
     min-width: 170px;
     align-self: flex-end;
     flex: 1 1 auto;
-    margin-top: 17px;
-    margin-left: 22px;
 }
 
 .mx_Login_field_group {
